--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,19 @@
   </head>
   <body>
     <p>Welcome to the Chat App</p>
+
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+
+      socket.on('connect', function() {
+        console.log('Connected to server');
+      });
+
+      socket.on('disconnect', function() {
+        console.log('Disconnected from server');
+      });
+    </script>
   </body>
 </html>
