--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,6 @@
 
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-
-      socket.on('connect', function() {
-        console.log('Connected to server');
-      });
-
-      socket.on('disconnect', function() {
-        console.log('Disconnected from server');
-      });
-    </script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
