--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
   <body>
     <p>Welcome to the Chat App</p>
 
+    <ol id="messages"></ol>
+
+    <form id="message-form">
+      <input type="text" name="message-input" placeholder="Type some message">
+      <button>Send</button>
+    </form>
+
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
