--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       <input type="text" name="message-input" placeholder="Type some message">
       <button>Send</button>
     </form>
+    <button id="send-location-btn">Send Location</button>
 
 
     <script src="/socket.io/socket.io.js"></script>
