--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/moment.js"></script>
     <script src="/js/index.js"></script>
   </body>
 </html>
