--- a/public/index.html
+++ b/public/index.html
@@ -2,63 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="/css/styles.css">
-    <title></title>
+    <title>Join | ChatApp</title>
   </head>
 
+  <body class="centered-form">
+    <div class="centered-form__form">
+      <form action="chat.html" method="post">
 
-  <body class="chat">
-
-
-    <div class="chat__sidebar">
-      <h3>People</h3>
-      <div id="people"></div>
-    </div>
-
-    <div class="chat__main">
-      <ol id="messages" class="chat__messages"></ol>
-
-      <div class="chat__footer">
-        <form id="message-form">
-          <input type="text" name="message-input" placeholder="Type some message" autofocus autocomplete="off">
-          <button>Send</button>
-        </form>
-        <button id="send-location-btn">Send location</button>
+      </form>
+      <div class="form-field">
+        <h3>Join a Chat</h3>
+      </div>
+      <div class="form-field">
+        <label>Display Name</label>
+        <input type="text" name="name" autofocus>
+      </div>
+      <div class="form-field">
+        <label>Room Name</label>
+        <input type="text" name="room">
+      </div>
+      <div class="form-field">
+        <button>Join</button>
       </div>
     </div>
-
-
-
-
-    <script id="message-template" type="text/template">
-      <li class="message">
-        <div class="message__title">
-          <h4>{{from}}</h4>
-          <span>{{createdAt}}</span>
-        </div>
-        <div class="message__body">
-          <p>{{text}}</p>
-        </div>
-      </li>
-    </script>
-
-    <script id="location-message-template" type="text/template">
-      <li class="message">
-        <div class="message__title">
-          <h4>{{from}}</h4>
-          <span>{{createdAt}}</span>
-        </div>
-        <div class="message__body">
-          <p>
-            <a href="{{url}}" target="_blank">My current location</a>
-          </p>
-        </div>
-      </li>
-    </script>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/libs/moment.js"></script>
-    <script src="/js/libs/mustache.js"></script>
-    <script src="/js/index.js"></script>
   </body>
+
 </html>
