--- a/public/index.html
+++ b/public/index.html
@@ -8,25 +8,26 @@
   </head>
 
   <body class="centered-form">
-    <div class="centered-form__form">
-      <form action="chat.html" method="post">
 
+    <div class="centered-form__form">
+      <form action="chat.html" method="get">
+        <div class="form-field">
+          <h3>Join a Chat</h3>
+        </div>
+        <div class="form-field">
+          <label>Display Name</label>
+          <input type="text" name="name" autofocus>
+        </div>
+        <div class="form-field">
+          <label>Room Name</label>
+          <input type="text" name="room">
+        </div>
+        <div class="form-field">
+          <button>Join</button>
+        </div>
       </form>
-      <div class="form-field">
-        <h3>Join a Chat</h3>
-      </div>
-      <div class="form-field">
-        <label>Display Name</label>
-        <input type="text" name="name" autofocus>
-      </div>
-      <div class="form-field">
-        <label>Room Name</label>
-        <input type="text" name="room">
-      </div>
-      <div class="form-field">
-        <button>Join</button>
-      </div>
     </div>
+
   </body>
 
 </html>
