Test login button added

--- a/public/chat.html
+++ b/public/chat.html
@@ -13,6 +13,13 @@
     <div class="chat__sidebar">
       <h3>People</h3>
       <div id="people"></div>
+      <div class="test-btn-div">
+        <a id="test-link" href="" target="_blank">open a new tab as test</a>
+      </div>
+      <div class="nav-div">
+        <a href="/" target="_blank">Home</a>
+        <a href="/">Logout</a>
+      </div>
     </div>
 
     <div class="chat__main">
