--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,10 @@
       </form>
     </div>
 
+    <footer>
+      Developed by <a href="#">Emiliano Mastragostino</a>
+    </footer>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
   </body>
